# wafer-anomaly-detection

./: README.md  pyproject.toml  test.ipynb
configs/: model.yaml  trainer.yaml
configs/kaggle/: model.yaml  trainer.yaml
configs/local/: model.yaml  trainer.yaml
references/: references.bib
src/wafer_ad/data/: dataloader.py  dataset.py
src/wafer_ad/inference/: test.py
src/wafer_ad/model/: FrEIA.py  extractor.py  flow.py
src/wafer_ad/models/: FrEIA.py  cs_flow.py  extractor.py  feature_extractor.py  flow.py
src/wafer_ad/models/resnet/: resnet.py
src/wafer_ad/training/: callback.py  loss.py  metric.py  pipeline.py  train.py  trainer.py
src/wafer_ad/utils/: config.py  constant.py  devices.py  figure.py  other.py  parsing.py  path.py  seed.py
src/wafer_ad/utils/configuration/: base.py  configurable.py  model_config.py  training_config.py
