[project]
name = "wafer-ad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "efficientnet-pytorch>=0.7.1",
    "freia>=0.2",
    "pyyaml>=6.0.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torcheval>=0.0.7",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["src"]
